# Auxiliary-loss-free

./: .dockerignore  .gitignore  Dockerfile  PROJECT.md  README.md  pyproject.toml
docs/: experiment_report.md  metrics_and_wandb.md  project.md  router_variants.md
experiments/: qwen3_moe_c4_1b_megatron_alf.py  qwen3_moe_c4_1b_megatron_alf_adaptive_per_expert.py  qwen3_moe_c4_1b_megatron_alf_adaptive_per_expert_momentum.py  qwen3_moe_c4_1b_megatron_alf_ema.py  qwen3_moe_c4_1b_megatron_aux_loss.py  qwen3_moe_c4_300m_alf.py  qwen3_moe_c4_300m_alf_adaptive_ema_gain_coupled.py  qwen3_moe_c4_300m_alf_adaptive_ema_persistent_oscillation.py  qwen3_moe_c4_300m_alf_adaptive_ema_variance.py  qwen3_moe_c4_300m_alf_adaptive_per_expert.py  qwen3_moe_c4_300m_alf_adaptive_per_expert_momentum.py  qwen3_moe_c4_300m_alf_ema.py  qwen3_moe_c4_300m_aux_loss.py  qwen3_moe_c4_500m_alf.py  qwen3_moe_c4_500m_alf_ema.py  qwen3_moe_c4_500m_aux_loss.py  qwen3_moe_owt_104m_alf.py  qwen3_moe_owt_104m_alf_accumulated_sign.py  qwen3_moe_owt_104m_alf_adaptive_ema_gain_coupled.py  qwen3_moe_owt_104m_alf_adaptive_ema_persistent_oscillation.py  qwen3_moe_owt_104m_alf_adaptive_ema_variance.py  qwen3_moe_owt_104m_alf_adaptive_per_expert.py  qwen3_moe_owt_104m_alf_adaptive_per_expert_momentum.py  qwen3_moe_owt_104m_alf_balanced_topk_sign.py  qwen3_moe_owt_104m_alf_ema.py  qwen3_moe_owt_104m_aux_loss.py  qwen3_moe_tiny_alf.py  qwen3_moe_tiny_aux_loss.py
output/logs/: work_log.txt
scripts/: prepare_c4_bpe_tokens.py  prepare_text_bpe_tokens.py  run_c4_1b_megatron_8xa100.sh  run_c4_300m_baselines.sh  run_c4_500m_baselines.sh  run_owt_104m_baseline.sh  run_owt_104m_baselines.sh  run_owt_new_method_sweep.sh
src/alf/: __init__.py  config.py  data.py  eval.py  inspect.py  megatron_router.py  megatron_train.py  metrics.py  modeling.py  observability.py  router.py  train.py  wandb_logging.py
tests/: test_config.py  test_data.py  test_megatron.py  test_metrics.py  test_modeling.py  test_prepare_c4_bpe_tokens.py  test_prepare_text_bpe_tokens.py  test_router.py  test_train_ddp_helpers.py  test_train_inspect.py  test_wandb_logging.py
tests/fixtures/: tiny_corpus.txt
