[project]
name = "alf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "pytest>=9.1.1",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
alf-train = "alf.train:main"
alf-inspect-router = "alf.inspect:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
