[project]
name = "alf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "pytest>=9.1.1",
    "safetensors>=0.8.0",
    "torch==2.10.0",
    "tqdm>=4.68.3",
    "tokenizers>=0.22.0",
    "transformers>=5.12.1",
    "wandb>=0.28.0",
    "megatron-core>=0.18,<0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
alf-train = "alf.train:main"
alf-inspect-router = "alf.inspect:main"
alf-megatron-train = "alf.megatron_train:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
transformer-engine = { git = "https://github.com/NVIDIA/TransformerEngine.git", rev = "v2.16.1" }

[tool.uv]
no-build-isolation-package = ["transformer-engine"]

[dependency-groups]
te-build = [
    "ninja>=1.13.0",
    "nvidia-cuda-cccl-cu12==12.8.90",
    "nvidia-cuda-nvcc-cu12==12.8.93",
    "pybind11>=3.0.4",
    "transformer-engine",
    "wheel>=0.47.0",
]
